--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "quagga": "^0.12.1",
     "react": "^18",
     "react-barcode-reader": "^0.0.2",
     "react-day-picker": "^8.10.1",
